[package]
name = "throwing-macros"
version = "0.1.1"
authors = ["Benjamin Swart <Benjaminswart@email.cz>"]
categories = ["rust-patterns"]
description = "Create explicit errors easily with a handy macro"
documentation = "https://docs.rs/throwing-macros/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SvizelPritula/throwing"
rust-version = "1.65"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.32", features = ["full"] }
